# ocaml-taglib

./: .gitignore  .travis.yml  CHANGES  Makefile.in  README  README.md  configure.ac  dune-project  taglib.opam  taglib.opam.template
.github/workflows/: main.yml
examples/: Makefile  dune  properties.ml  read_tags.ml  tagutil.ml
examples/properties/: Makefile  dune  properties.ml
examples/tagutil/: Makefile  dune  tagutil.ml
m4/: ocaml.m4
opam/: opam
src/: .taglib.ml.swp  META.in  Makefile.in  dune  taglib.ml  taglib.mli  taglib_stubs.c  taglib_stubs.cc  taglib_stubs.cxx  taglib_version.cc
src/config/: discover.ml
