opam-version: "2.0"
name: "taglib"
version: "0.3.6"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-taglib"
bug-reports: "https://github.com/savonet/ocaml-taglib/issues"
synopsis:
  "Bindings for the taglib library which provides functions for reading tags in headers of audio files"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "taglib"]
depexts: [
  ["taglib-dev"] {os-distribution = "alpine"}
  ["gcc-c++" "taglib-devel"] {os-family = "suse"}
  ["gcc-c++" "taglib-devel"] {os-distribution = "fedora"}
  ["gcc-c++" "taglib-devel"] {os-distribution = "centos"}
  ["libtag1-dev"] {os-distribution = "debian"}
  ["libtag1-dev"] {os-distribution = "ubuntu"}
  ["taglib"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-taglib.git"
