opam-version: "2.0"
name: "taglib"
version: "0.3.6"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-taglib"
bug-reports: "https://github.com/savonet/ocaml-taglib/issues"
synopsis:
  "Bindings for the taglib library which provides functions for reading tags in headers of audio files"
depends: [
  "ocaml" {>= "4.02.0"}
  "dune"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depexts: [
  ["taglib-dev"] {os-distribution = "alpine"}
  ["gcc-c++" "taglib-devel"] {os-family = "suse"}
  ["gcc-c++" "taglib-devel"] {os-distribution = "fedora"}
  ["gcc-c++" "taglib-devel"] {os-distribution = "centos"}
  ["libtag1-dev"] {os-family = "debian"}
  ["taglib"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-taglib.git"
