(executable
 (name properties)
 (modules properties)
 (libraries taglib))

(executable
 (name tagutil)
 (modules tagutil)
 (libraries taglib))

(rule
 (target test.mp3)
 (action
  (run
   ffmpeg
   -f
   lavfi
   -i
   sine=frequency=1000:duration=5
   -metadata
   title=ocaml_taglib_test
   %{target})))

(rule
 (alias runtest)
 (package taglib)
 (deps
  (:mp3 test.mp3)
  (:properties ./properties.exe))
 (action
  (system "./%{properties} %{mp3} | grep ocaml_taglib_test")))
