(executable
 (name read_tags)
 (modules read_tags)
 (libraries taglib))

(executable
 (name properties)
 (modules properties)
 (libraries taglib))

(executable
 (name tagutil)
 (modules tagutil)
 (libraries taglib))

(rule
 (alias runtest)
 (package taglib)
 (deps
  (:mp3 test.mp3)
  (:properties ./properties.exe))
 (action
  (system "./%{properties} %{mp3} | grep ocaml_taglib_test >/dev/null")))
