(library
 (name            taglib)
 (public_name     taglib)
 (cxx_names       taglib_stubs)
 (cxx_flags       (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run %{discover})))
