(library
 (name taglib)
 (public_name taglib)
 (synopsis "OCaml bindings for taglib")
 (libraries unix)
 (foreign_stubs
  (language cxx)
  (names taglib_stubs)
  (extra_deps config.h)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets config.h c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
